--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>com.kurento.kas</groupId>
 			<artifactId>kas-media-native</artifactId>
-			<version>1.2.0</version>
+			<version>1.2.1-SNAPSHOT</version>
 			<type>so</type>
 			<classifier>armeabi</classifier>
 			<scope>runtime</scope>
