--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies versions -->
-		<kas-media-native.version>1.2.2</kas-media-native.version>
+		<kas-media-native.version>1.2.3-SNAPSHOT</kas-media-native.version>
 
 	</properties>
 
